feat(api): get patient by id
